# DPLL

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
.CI/: check-clang-format.py  check-clang-tidy.py
.github/workflows/: check-clang-format.py  run-tests.yml
algorithm/: dimacs_loader.cpp  dimacs_loader.hpp  dpll.cpp  dpll.hpp
tests/: CMakeLists.txt  test.py
